# LLM_Learning

CREWAI_FLOW/test_flow/: README.md  pyproject.toml
CREWAI_FLOW/test_flow/output/: email.json  evaluation_result.json  guide_outline.json  send_email.json
CREWAI_FLOW/test_flow/src/test_flow/: main.py  prompt.py  schemas.py  test.ipynb
CREWAI_FLOW/test_flow/src/test_flow/crews/mail_drafter/: mail_drafter.py
CREWAI_FLOW/test_flow/src/test_flow/crews/mail_drafter/config/: agents.yaml  tasks.yaml
CREWAI_FLOW/test_flow/src/test_flow/tools/: send_email_tool.py
agents/1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
agents/2_openai/: 1_lab1.ipynb  1_lab1.py  2_lab2.ipynb  2_lab2_part1.py  2_lab2_part2.py  2_lab2_part3.py  2_lab2_part4.py  3_lab3.ipynb  3_lab3_part1.py  4_lab4.ipynb  4_lab4_part1.py  test_ground.ipynb
agents/3_crew/Personal_project/debate_app/: README.md  pyproject.toml
agents/3_crew/Personal_project/debate_app/knowledge/: user_preference.txt
agents/3_crew/Personal_project/debate_app/output/: decide.md  oppose.md  propose.md
agents/3_crew/Personal_project/debate_app/src/debate_app/: crew.py  main.py
agents/Notes/: OLLAMA_INSTALLATION.docx  Week1.docx
