[project]
name = "test_flow"
version = "0.1.0"
description = "test_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0",
]

[project.scripts]
kickoff = "test_flow.main:kickoff"
run_crew = "test_flow.main:kickoff"
plot = "test_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
