[project]
name = "debate_app"
version = "0.1.0"
description = "debate_app using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
debate_app = "debate_app.main:run"
run_crew = "debate_app.main:run"
train = "debate_app.main:train"
replay = "debate_app.main:replay"
test = "debate_app.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
